--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -16,7 +16,7 @@ monolog:
             channels: ["!event", "!doctrine"]
         deprecation:
             type: stream
-            path: "php://stderr" # "%kernel.logs_dir%/%kernel.environment%.deprecations.log"
+            path: "%kernel.logs_dir%/%kernel.environment%.deprecations.log"
         deprecation_filter:
             type: filter
             handler: deprecation
